--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "bootstrap.2.0.4"
+    "name": "bootstrap-2.0.4"
   , "description": "HTML, CSS, and JS toolkit from Twitter."
   , "version": "2.0.4"
   , "keywords": ["bootstrap", "css"]
@@ -8,7 +8,7 @@
   , "scripts": { "test": "make test" }
   , "repository": {
       "type": "git"
-    , "url": "https://github.com/chrisballen/bootstrap.git"
+    , "url": "https://github.com/chrisballen/bootstrap-2.0.4.git"
   }
   , "licenses": [
     {
@@ -17,7 +17,7 @@
     }
   ]
   , "devDependencies": {
-      "uglify-js": "1.2.6"
+      "uglify-js": "2.6.0"
     , "jshint": "0.6.1"
     , "recess": "1.0.3"
     , "connect": "2.1.3"
